Use WebContents Activity when launching autofill settings.

Bug: 837631

Change-Id: Ia2f2d7f23e23b64114ae29538feb24027c94f137
Reviewed-on: https://chromium-review.googlesource.com/1050345
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Reviewed-by: Peter Conn <peconn@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Anna Malova <amalova@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557519}
Former-commit-id: 0496add0280f397fa78cc66b12957c0882b3f13f