chrome/browser/android/preferences/preferences_launcher.h
@@ -8,13 +8,17 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/macros.h"
 
+namespace content {
+class WebContents;
+}
+
 namespace chrome {
 namespace android {
 
 class PreferencesLauncher {
  public:
   // Opens the autofill settings page.
-  static void ShowAutofillSettings();
+  static void ShowAutofillSettings(content::WebContents* web_contents);
 
   // Opens the password settings page.
   static void ShowPasswordSettings();
